JsTestDriver/test/testData/assertFramework/jstd/highlighting/jstdTestCaseQuickFixAvailable.js
<error descr="Add JsTestDriver assertion framework support">TestCase</error>("", {

});